--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "postcss": "^8.4.0",
